@@ -2,6 +2,7 @@ omweather (0.28) unstable; urgency=low
 
   * Updated Finish, Spain, Russian translations
   * Fixed problem with correct jump to selected day in popup window 
+  * Added possibilty to change scaling in popup window
 
  -- Vlad Vasiliev <vlad@gas.by>  Fri, 2 July 2010 21:04:20 +0200
 
